fix: critical website issues - broken links, XSS, sitemap, analytics
- Fix 80+ broken /main/ links -> / in cases and articles
- Add XSS protection (escapeHtml) in script.js
- Fix relative API paths to absolute /api/...
- Update sitemap.xml: domain to agent.loops.uz, add 4 missing cases
- Fix Yandex Metrika ID 99369498 -> 106627787 in 3 cases
- Fix footer class typo in articles/index.html
- Update robots.txt: remove /main/, fix sitemap domain
- Remove test-sheets.php (security)

--- a/cases/case-dco/index.html
+++ b/cases/case-dco/index.html
@@ -45,11 +45,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
-                    <a href="/main/">Главная</a>
-                    <a href="/main/#lead-form">Контакты</a>
+                    <a href="/">Главная</a>
+                    <a href="/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/">Главная</a> <span class="sep">></span>
                 <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">DCO</span>
             </div>
@@ -127,7 +127,7 @@
                     <h3>Хотите обучить команду?</h3>
                     <p class="text-muted">Мы передадим свои знания вашим сотрудникам, чтобы маркетинг работал внутри.
                     </p>
-                    <a href="/main/#lead-form" class="btn btn-full"
+                    <a href="/#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
 
@@ -192,7 +192,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <a href="/main/" class="footer-logo">LOOPS</a>
+            <a href="/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
