--- a/cases/case-legal/index.html
+++ b/cases/case-legal/index.html
@@ -44,11 +44,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
-                    <a href="/main/">Главная</a>
-                    <a href="/main/#lead-form">Контакты</a>
+                    <a href="/">Главная</a>
+                    <a href="/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -57,7 +57,7 @@
     <section class="section">
         <div class="container" style="padding-top: 100px;">
             <div class="breadcrumbs mb-40">
-                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/">Главная</a> <span class="sep">></span>
                 <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">Юридические Услуги</span>
             </div>
@@ -70,7 +70,7 @@
     <script src="/js/script.js"></script>
     <footer class="site-footer">
         <div class="container">
-            <a href="/main/" class="footer-logo">LOOPS</a>
+            <a href="/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
