--- a/cases/case-viamed/index.html
+++ b/cases/case-viamed/index.html
@@ -57,11 +57,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
-                    <a href="/main/">Главная</a>
-                    <a href="/main/#lead-form">Контакты</a>
+                    <a href="/">Главная</a>
+                    <a href="/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
