--- a/cases/case-chery/index.html
+++ b/cases/case-chery/index.html
@@ -45,11 +45,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
-                    <a href="/main/">Главная</a>
-                    <a href="/main/#lead-form">Контакты</a>
+                    <a href="/">Главная</a>
+                    <a href="/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/">Главная</a> <span class="sep">></span>
                 <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">Chery</span>
             </div>
@@ -130,7 +130,7 @@
                     <div style="font-size: 30px; margin-bottom: 15px;">🚀</div>
                     <h3>Хотите такой же результат?</h3>
                     <p class="text-muted">Мы бесплатно разберем вашу ситуацию и предложим стратегию.</p>
-                    <a href="/main/#lead-form" class="btn btn-full"
+                    <a href="/#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
 
@@ -195,7 +195,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <a href="/main/" class="footer-logo">LOOPS</a>
+            <a href="/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
