--- a/cases/case-feedup/index.html
+++ b/cases/case-feedup/index.html
@@ -45,11 +45,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
-                    <a href="/main/">Главная</a>
-                    <a href="/main/#lead-form">Контакты</a>
+                    <a href="/">Главная</a>
+                    <a href="/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/">Главная</a> <span class="sep">></span>
                 <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">FeedUp</span>
             </div>
@@ -126,7 +126,7 @@
                     <div style="font-size: 30px; margin-bottom: 15px;">🍔</div>
                     <h3>Негатив убивает продажи?</h3>
                     <p class="text-muted">Превратим ваших хейтеров в адвокатов бренда.</p>
-                    <a href="/main/#lead-form" class="btn btn-full"
+                    <a href="/#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Консультация</a>
                 </div>
 
@@ -192,7 +192,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <a href="/main/" class="footer-logo">LOOPS</a>
+            <a href="/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
