--- a/cases/case-rebar/index.html
+++ b/cases/case-rebar/index.html
@@ -57,11 +57,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="/main/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="/" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="/articles/">Полезное</a>
-                    <a href="/main/">Главная</a>
-                    <a href="/main/#lead-form">Контакты</a>
+                    <a href="/">Главная</a>
+                    <a href="/#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
     <section class="section">
         <div class="container" style="padding-top: 100px;">
             <div class="breadcrumbs mb-40">
-                <a href="/main/">Главная</a> <span class="sep">></span>
+                <a href="/">Главная</a> <span class="sep">></span>
                 <a href="/articles/">Полезное</a> <span class="sep">></span>
                 <span class="current">Производство Арматуры</span>
             </div>
@@ -124,7 +124,7 @@
                     <h3 style="margin-bottom: 20px;">Хотите такой же результат в B2B?</h3>
                     <p style="margin-bottom: 30px;">Оставьте заявку, и мы рассчитаем окупаемость системы для вашей ниши.
                     </p>
-                    <a href="/main/#lead-form" class="btn" style="background: #000; color: #fff; border: none;">Получить
+                    <a href="/#lead-form" class="btn" style="background: #000; color: #fff; border: none;">Получить
                         Расчет</a>
                 </div>
             </article>
@@ -135,7 +135,7 @@
     <script src="/js/script.js"></script>
     <footer class="site-footer">
         <div class="container">
-            <a href="/main/" class="footer-logo">LOOPS</a>
+            <a href="/" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
